# learn-langchain

./: .env.example  langchain concepts.md  pyproject.toml
app/: __init__.py  run.py
app/chatmodels/: openai.py
app/concept/callback/: app.py
app/concept/embedding_models/: app.py
app/concept/few_shot_prompting/: app.py
app/concept/output_parsers/: app.py
app/concept/prompt_templates/: app.py
app/concept/retriever/: app.py
app/concept/textsplitter/: app.py
app/concept/tools/: tools.py
app/concept/vectorstores/: app.py
app/documentloader/: app.py
app/integrations/: document_loader_pdf.py  document_loader_s3.py  document_loader_web.py  retrievers_aws.py  retrievers_tavily.py  retrievers_wikipedia.py  tool_gmail.py  tool_slack.py  tool_tavily.py  tool_wikipedia.py  tool_youtube_search.py  vector_stores.py  vector_stores_astra.py  vector_stores_pinecone.py
app/streaming/: streaming.py
app/tutorials/: create_retrieval_chain.py  rag.py  rag2.py
