[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "firecrawl-py>=2.4.0",
    "langchain-community>=0.3.22",
    "langchain[openai]>=0.3.24",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
