[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "firecrawl-py>=2.4.0",
    "langchain-community>=0.3.22",
    "langchain-text-splitters>=0.3.8",
    "langchain[openai]>=0.3.24",
    "langgraph>=0.4.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
